# nic-driver-dev

./: .gitignore  README.md  flake.nix  justfile
configs/: kernel.nix
kdf-cli/: README.md  default.nix  pyproject.toml
kdf-cli/src/kdf_cli/: __init__.py  bg_tasks.py  initramfs.py  main.py  nix.py  qemu.py  virtiofs.py
kdf-init/: Cargo.toml  default.nix
kdf-init/src/: cmdline.rs  main.rs  system.rs  virtiofs.rs
modules/helloworld/: .clangd  Makefile  helloworld.c
modules/rust/: rust_out_of_tree.rs
patches/: 0001-rust-don-t-assert-sysroot_src-location.patch
scripts/: debug_gdb.py
